--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
     <script
+      defer
       is:inline
       src="https://identity.netlify.com/v1/netlify-identity-widget.js"
     ></script>
   </head>
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"
+    ></script>
   </body>
 </html>
